--- a/angular2-esri-netcore/src/angular2-esri-netcore/css/default.scss
+++ b/angular2-esri-netcore/src/angular2-esri-netcore/css/default.scss
@@ -1,22 +1,5 @@
-﻿html, body {
-    font-family: Abel, Arial;
-    width: 100%;
-    margin: 0;
-    height: 100%;
-}
-
-
-.component {
-    position: absolute;
-    width: 25%;
-    border: 1px solid #333;
-    padding: 5px;
-    margin: 10px;
-    background: rgba(0,0,0,0);
-    z-index: 1000;
-}
-
-#map-view {
-    height: 100%;
-    width: 100%;
-}
+﻿
+@import "config";
+@import "maps";
+@import "menus";
+@import "components";
