--- a/angular2-esri-netcore/src/angular2-esri-netcore/css/_menus.scss
+++ b/angular2-esri-netcore/src/angular2-esri-netcore/css/_menus.scss
@@ -69,7 +69,7 @@
 button {
     font-family: $font-family;
 }
-
+ 
 button.icon {
     background-color: transparent;
     cursor: pointer;
@@ -77,7 +77,7 @@ button.icon {
     padding: 0 10px 0 10px;
 }
 
-button.icon i {
+button.icon.text i { 
     margin-right: 5px;
 }
 
@@ -97,9 +97,15 @@ button.action {
    z-index:1;
 } 
 
+
 button.action:disabled {
     color: darken($white, 70%);
     cursor: not-allowed;
+}
+
+button.action:hover {
+    color: darken($button-base, 20%);
+    opacity: 1;
 }
 
 button.action:enabled:before {
@@ -241,10 +247,15 @@ button.action i {
         }
     }
 
+    button.menu-action {
+        border: 1px solid transparent;
+    }
+
     button.menu-action:hover {
         background: $darker-base;
         border-radius: 3px;
         color: darken($font-color, 10%);
+        border: 1px solid darken($font-color, 10%);
         transition: all 0.4s;
     }
 }
