Added some dummypoints.

--- a/angular2-esri-netcore/src/angular2-esri-netcore/app/draw/drawTools.component.html
+++ b/angular2-esri-netcore/src/angular2-esri-netcore/app/draw/drawTools.component.html
@@ -26,7 +26,7 @@
 
         <div class="menu-section">
             <div>
-                <button class="action" (click)="clear()"><i class="fa fa-times"></i> Clear all</button>
+                <button class="action" (click)="clear()"><i class="fa fa-times"></i> Clear drawings</button>
             </div>            
 
         </div>
