--- a/angular2-esri-netcore/src/angular2-esri-netcore/app/draw/drawTools.component.html
+++ b/angular2-esri-netcore/src/angular2-esri-netcore/app/draw/drawTools.component.html
@@ -22,6 +22,10 @@
                 <div><button class="icon" (click)="draw('circle')">Circle</button></div>
             </div>
 
+            <div class="draw-options">
+                <div><button class="icon" (click)="draw('text')">Text</button></div>
+            </div>
+             
         </div>
 
         <div class="menu-section">
